manifests/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: capstone-project-app
  namespace: devsecops
spec:
  selector:
    app: capstone-project-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: devsecops
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 32000   # Exposes Flask externally
  type: NodePort
