manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-project-app
  namespace: devsecops
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: devsecops.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capstone-project-app
                port:
                  number: 80
